# mbzirc2020

./: .clang-format  .gitignore  .rosinstall  README.md  requirements.txt
ATRV-Drivers/ur5_driver/: package.xml
ATRV-Drivers/ur5_driver/src/: idmind_serial.py  node.py
atrv_ur5e/ATRV-Drivers/ur5_driver/: CMakeLists.txt
atrv_ur5e/ATRV-Drivers/ur5_driver/cfg/: ur5.yaml
atrv_ur5e/ATRV-Drivers/ur5_driver/launch/: idmind_ur5.launch
atrv_ur5e/ATRV-Drivers/ur5_driver/msg/: SystemPowerSupply.msg  SystemStatus.msg
atrv_ur5e/ATRV-Drivers/ur5_driver/src/: hw_api.py
atrv_ur5e/atrvjr/drivers/rflex/: CMakeLists.txt
atrv_ur5e/atrvjr/navigation/odom_calibration/: CMakeLists.txt
atrv_ur5e/mbot_pregrasp_planning/: CMakeLists.txt  package.xml
atrv_ur5e/mbot_pregrasp_planning/ros/launch/: pose_mock_up_gui.launch  pregrasp_planner.launch
atrv_ur5e/robocup-at-work/mcr_arm_motions/: CMakeLists.txt
atrv_ur5e/robocup-at-work/mcr_manipulation_measurers/: CMakeLists.txt
atrvjr/drivers/atrvjr/: CMakeLists.txt  README.md  SETUP.md
atrvjr/drivers/host_console/: CMakeLists.txt  README.md  package.xml
atrvjr/drivers/rflex/: package.xml
bricks_detection/: CMakeLists.txt  README.md  package.xml  setup.py
bricks_detection/cfg/: bags_colors.json  grvc_field_testing.json  hsv_colors.json  ist_colors.json  pointcloud_filters.cfg  reconfig_filters.cfg
bricks_detection/include/bricks_detection/: bricks_detection.h  pose_estimation.h  ransac_plane_detection.h  shape_detection.h
bricks_detection/launch/: bricks_detection.launch  ns_bricks_detection.launch  pcloud_merge.launch
bricks_detection/src/: bricks_detection.cpp  bricks_detection_handler.cpp  bricks_detection_handler.h  bricks_detection_node.cpp  color_filtering.cpp  distance_filtering.cpp  pcloud_merge_handler.cpp  pcloud_merge_handler.h  pcloud_merge_node.cpp  pose_estimation.cpp  ransac_plane_detection.cpp  shape_detection.cpp
challenge_2_sim_example/fake_shared_regions_admin/: CMakeLists.txt  package.xml
challenge_2_sim_example/fake_shared_regions_admin/scripts/: shr_region_admin_node.py
drone_detect_tracking/: .hgignore  CMakeLists.txt  README.md  package.xml  setup.py
drone_detect_tracking/.hg/: branch  dirstate  hgrc  last-message.txt  undo.backup.dirstate  undo.branch  undo.desc
drone_detect_tracking/.hg/cache/: branch2-served  rbc-names-v1  rbc-revs-v1  tags2-visible
drone_detect_tracking/.hg/store/: 00changelog.i  00manifest.i  fncache  phaseroots  undo.backup.fncache
drone_detect_tracking/cfg/: color_detector_reconfigure.cfg  drone_detector_reconfigure.cfg  moving_object_detector_reconfigure.cfg
drone_detect_tracking/include/drone_detector_tracking/: candidate.h  color_detector.h  color_detector_handler.h  drone_detector.h  drone_detector_handler.h  georef.h  moving_object_detector.h  moving_object_detector_handler.h  moving_object_parameters.h  opt_flow.h  opt_flow_points_set.h  processed_image.h  reconfigure_parameters.h  valid_detection.h
drone_detect_tracking/launch/: color_detection.launch  drone_detection.launch  drone_detection.launch.orig
drone_detect_tracking/nodes/: color_detector_node.cpp  drone_detector_node.cpp  group_test.cpp  moving_object_detector_node.cpp
drone_detect_tracking/scripts/: dji_tf.py
drone_detect_tracking/src/: camera_parameters.cpp  candidate.cpp  color_detector handler.cpp  color_detector.cpp  drone_detector.cpp  drone_detector_handler.cpp  georef.cpp  movin_object_detector.cpp  moving_object_detector_handler.cpp  opt_flow.cpp  opt_flow_points_set.cpp  processed_image.cpp  valid_detection.cpp
mbot_moveit_planning_scene/: package.xml  setup.py
mbzirc2020/connected_agents_info/: package.xml
mbzirc2020/connected_agents_info/scripts/: connected_agents_info.py
mbzirc_gazebo_simulation/ch1_score_manager/: CMakeLists.txt  package.xml  setup.py
mbzirc_gazebo_simulation/ch1_score_manager/launch/: ch1_score_manager.launch
mbzirc_gazebo_simulation/ch1_score_manager/scripts/: ch1_score_manager_node.py
mbzirc_gazebo_simulation/mbzirc_gazebo_plugins/: CMakeLists.txt  package.xml
mbzirc_gazebo_simulation/mbzirc_gazebo_plugins/launch/: fake_detection_challenge_2.launch  fake_object_detection_world.launch  magnetic_gripper_world.launch  target_drone.launch
mbzirc_gazebo_simulation/mbzirc_gazebo_plugins/mesh/: obj_detect_fov.dae
mbzirc_gazebo_simulation/mbzirc_gazebo_plugins/msg/: SimDroplet.msg
mbzirc_gazebo_simulation/mbzirc_gazebo_plugins/src/: droplet_factory.cpp  fake_object_detection.cpp  magnetic_gripper.cpp  target_drone_trajectory.cpp
mbzirc_gazebo_simulation/mbzirc_gazebo_plugins/urdf/: fake_camera.xacro  magnetic_gripper.xacro  robot.urdf.xacro
mbzirc_gazebo_simulation/mbzirc_gazebo_plugins/worlds/: fake_obj_detection_test.world  magnetic_gripper_test.world
object_estimation/: CMakeLists.txt  package.xml
object_estimation/config/: conf_ch2.yaml  conf_ch3.yaml  piles.yaml
object_estimation/include/object_estimation/: centralized_estimator.h  object_tracker.h  timer.hpp
object_estimation/launch/: estimation.launch
object_estimation/scripts/: object_publisher_tester.py  tester_publisher.py
object_estimation/src/: estimation_node.cpp
object_estimation/src/estimator/: centralized_estimator.cpp  object_tracker.cpp
pcl_conversions/: CMakeLists.txt
pcl_ros/: CMakeLists.txt
robocup-at-work/mcr_pose_generation/: CMakeLists.txt
shared_regions_manager/: package.xml
shared_regions_manager/scripts/: shared_regions_manager.py  simple_regions_manager.py  test.py
universal_robot-ur_e_fix/ur5_e_moveit_config_joao/: .setup_assistant  CMakeLists.txt
universal_robot-ur_e_fix/ur5_e_moveit_config_joao/config/: atrv_ur5e.srdf  controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml  ur5e.srdf
universal_robot-ur_e_fix/ur5_e_moveit_config_joao/launch/: atrv_ur5e_moveit_controller_manager.launch.xml  default_warehouse_db.launch  demo.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_pipeline.launch.xml  sensor_manager.launch.xml  trajectory_execution.launch.xml
(+1025 files in other folders)
