<?xml version="1.0"?>
<package format="2">
   <name>bricks_detection</name>
   <version>0.1.0</version>
   <description>The bricks_detection package</description>

   <maintainer email="rcaballero@catec.aero">Rafael Caballero Gonzalez</maintainer>
   <maintainer email="fidel@catec.aero">Fidel Gonzalez Leiva</maintainer>

   <license>TODO</license>

   <depend>message_filters</depend>

   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>cv_bridge</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>tf</build_depend>
   <build_depend>dynamic_reconfigure</build_depend>
   <build_depend>pcl_conversions</build_depend>
   <build_depend>pcl_ros</build_depend>
   <build_depend>mbzirc_comm_objs</build_depend>

   <build_export_depend>cv_bridge</build_export_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>sensor_msgs</build_export_depend>

   <exec_depend>cv_bridge</exec_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>tf</exec_depend>
   <exec_depend>dynamic_reconfigure</exec_depend>
   <exec_depend>pcl_conversions</exec_depend>
   <exec_depend>pcl_ros</exec_depend>
   <exec_depend>mbzirc_comm_objs</exec_depend>

   <export>
   </export>
</package>
