<?xml version="1.0"?>
<package format="2">
   <name>drone_detector_tracking</name>
   <version>0.0.0</version>
   <description>MAV detection and tracking node</description>

   <maintainer email="rcaballero@catec.aero">Rafael Caballero Gonzalez</maintainer>
   <maintainer email="fgonzalez@catec.aero">Fidel Gonzalez Leiva</maintainer>

   <license>TODO</license>

   <depend>message_filters</depend>
   <depend>eigen_conversions</depend>
   <depend>tf2_ros</depend>

   <buildtool_depend>catkin</buildtool_depend>
   <!-- <build_depend>message_filters</build_depend> -->
   <build_depend>roscpp</build_depend>
   <build_depend>cv_bridge</build_depend>
   <build_depend>image_transport</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>message_generation</build_depend>
   <build_depend>dynamic_reconfigure</build_depend>

   <build_export_depend>cv_bridge</build_export_depend>
   <build_export_depend>image_transport</build_export_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>sensor_msgs</build_export_depend>

   <exec_depend>roscpp</exec_depend>
   <exec_depend>image_transport</exec_depend>
   <exec_depend>message_runtime</exec_depend>
   <exec_depend>message_generation</exec_depend>
   <exec_depend>cv_bridge</exec_depend>
   <exec_depend>image_transport</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>dynamic_reconfigure</exec_depend>

   <export>
   </export>

</package>
