<?xml version="1.0"?>
<package>
    <name>mbot_moveit_planning_scene</name>
    <version>1.0.0</version>
    <description>
        Add world features to moveit planning scene, e.g. a cube.
        By adding objects into the planning scene we avoid collisions between the arm and the env.
    </description>

    <license>GPLv3</license>

    <author email="olima@isr.tecnico.ulisboa.pt">Oscar Lima</author>
    <maintainer email="olima@isr.tecnico.ulisboa.pt">Oscar Lima</maintainer>

    <buildtool_depend>catkin</buildtool_depend>

</package>
