<?xml version="1.0"?>
<package format="2">
  <name>ur5_driver</name>
  <version>0.0.0</version>
  <description>ROS Driver for UR5</description>

  <maintainer email="hpovoa@idmind.pt">Henrique</maintainer>


  <license>TODO</license>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>


</package>
