<?xml version="1.0"?>
<package format="2">
  <name>fake_shared_regions_admin</name>
  <version>0.0.0</version>
  <description>The fake_shared_regions_admin package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="mbzirc2020@todo.todo">mbzirc2020</maintainer>

  <license>TODO</license>

     <exec_depend>rospy</exec_depend> 
     <exec_depend>mbzirc_comm_objs</exec_depend> 
     <buildtool_depend>catkin</buildtool_depend>

  <export>


  </export>
</package>
