<?xml version="1.0"?>
<package format="2">
   <name>ch1_score_manager</name>
   <version>0.0.0</version>
   <description>The ch1_score_manager package</description>

   <maintainer email="rcaballero@catec.aero">rcaballero</maintainer>

   <license>TODO</license>

   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>rospy</build_depend>
   <build_depend>gazebo_msgs</build_depend>
   <build_export_depend>rospy</build_export_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>gazebo_msgs</exec_depend>

   <export>
   </export>
</package>