<?xml version="1.0"?>
<package>
  <name>mbzirc_gazebo_plugins</name>
  <version>0.0.1</version>
  <description>
	This package contains two gazebo plugins:
        - Model plugin simulating a magnetic gripper. The magnet can be de/activated through a ROS service.
	- Sensor plugin simulating object detection. Objects are plublished in a ROS topic.
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="ercarrion44@gmail.com">Eloy Retamino</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <author email="ercarrion44@gmail.com">Eloy Retamino</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>mbzirc_comm_objs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo</run_depend>
  <run_depend>mbzirc_comm_objs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
