<?xml version="1.0"?>
<package>
  <name>rflex</name>
  <version>0.0.0</version>
  <description>ROS adaptations of the RFLEX driver. </description>

  <maintainer email="david@todo.todo">david</maintainer>
  
  <author>David V. Lu, Mikhail Medvedev</author>
  <license>GPL</license>
  <url>http://ros.org/wiki/rflex</url>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
