<?xml version="1.0"?>
<package format="2">
  <name>indoor</name>
  <version>0.0.0</version>
  <description>The test package</description>

  <maintainer email="atrvjr@todo.todo">atrvjr</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
